<resources>
    <string name="app_name">commerce</string>
    <string name="RightAdress">The Right Fram\nFor Buying Farm products \nAnyDay</string>
    <string name="quality">It is now very easy to reach the\nbest quality farm\nproducts on JN farm!</string>
    <string name="kleine">Kleine.</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Register">REGISTER</string>
    <string name="registerDetails"> Do you have an account? Register</string>
    <string name="loginDetails"> Do you have an account? Login</string>
    <string name="letsRegister">Let\'s Register</string>
    <string name="cancel">cancel</string>
    <string name="send">send</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_the_password_reset_link_to_your_email">We will send you the password reset link to your email</string>
    <string name="best_deals">Best deals</string>
    <string name="best_products">Best Products</string>
    <string name="scotch_premium">Scotch Premium</string>
    <string name="_1600">$1600</string>
    <string name="add_to_cart">Add to cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lofcoding">Lofcoding</string>
    <string name="s">S</string>
    <string name="total">Total</string>
    <string name="_150">$150</string>
    <string name="my_cart">My Cart</string>
    <string name="address_location_ex_home">Address location Ex: Home</string>
    <string name="full_name">Full Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone">Phone</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="addresses">Addresses</string>
    <string name="my_account">My account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="forgot_change_password">Forgot/Change password</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="start">Start</string>
    <string name="JN">JN \n FARM</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="EnterID">EnterID</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="lets_login">Lets Login</string>
    <string name="workers">List of regestered workers\nat JN farm</string>
    <string name="Title" />
    <string name="Age" />
    <string name="age">Age</string>
    <string name="upload_your_image">Upload Your Image</string>
    <string name="register">Register</string>
    <string name="list_of_animals">List of Animals\non the farm</string>
    <string name="enter_password">Enter Password</string>
    <string name="yourAge">Enter your Age</string>
    <string name="upload_your_photo">Upload your \n  photo</string>
    <string name="submit">Submit</string>
    <string name="submit_information">Submit Information</string>

</resources>