<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.NewWorkerActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="338dp"
        android:layout_height="437dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineRigt"
        app:layout_constraintStart_toStartOf="@+id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:background="@color/blue"
            android:id="@+id/linearWk"
            android:layout_width="374dp"
            android:layout_height="482dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:text="@string/EnterID"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/wkAge"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:inputType="number"
                android:text="@string/yourAge"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/wkFN"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/FirstName"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/wkLN"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/LastName"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/wkTitle"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/enter_phone_number"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/wkPassword"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/enter_password"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineleft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRigt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="390dp" />


</androidx.constraintlayout.widget.ConstraintLayout>