<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.NewWorkerActivity">

    <LinearLayout
        android:id="@+id/linearWk"
        android:layout_width="359dp"
        android:layout_height="466dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/wks_save_btn"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRigt"
        app:layout_constraintStart_toStartOf="@+id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/tree"
            android:orientation="horizontal" />

        <EditText
            android:id="@+id/wkId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/EnterID"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/wkAge"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:hint="@string/yourAge"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/wkFN"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/FirstName"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/wkLN"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/LastName"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/wkTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:hint="Enter your title"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/wkPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_phone_number"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/wkPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:hint="@string/enter_password"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineleft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRigt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="390dp" />
    <Button
        android:id="@+id/wks_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/green"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@+id/linearWk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRigt"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/guidelineleft" />


</androidx.constraintlayout.widget.ConstraintLayout>