<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/log"
    android:layout_height="match_parent"
    android:id="@+id/login"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:id="@+id/LgLabel"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/JN"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/LLoginRight"
            app:layout_constraintStart_toStartOf="@+id/GLoginLeft"
            app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvLogin"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/lets_login"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/LLoginRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/GLoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/LgLabel" />

    <TextView
        android:id="@+id/tvDoYouHaveAccount"
        android:layout_width="299dp"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/registerDetails"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/LLoginRight"
        app:layout_constraintStart_toStartOf="@+id/GLoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <EditText
        android:id="@+id/lg_id"
        style="@style/editText"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:hint="Enter Title"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/LLoginRight"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/GLoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvDoYouHaveAccount" />

    <EditText
        android:id="@+id/lg_phone"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:numeric="integer"
        android:textColorHint="@color/black"
        android:phoneNumber="true"
        app:layout_constraintEnd_toEndOf="@id/LLoginRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/GLoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/lg_id" />

    <EditText
        android:id="@+id/lg_password"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@id/LLoginRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/GLoginLeft"
        app:layout_constraintTop_toBottomOf="@id/lg_phone" />

    <TextView
        android:id="@+id/lg_ForgotPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h2"
        app:layout_constraintStart_toStartOf="@id/GLoginLeft"
        app:layout_constraintTop_toBottomOf="@id/lg_password"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/black"/>


    <Button
        android:id="@+id/lg_button"
        android:layout_width="244dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/LLoginRight"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/GLoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/lg_ForgotPasswordLogin"
        app:layout_constraintVertical_bias="0.229" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLoginLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09
" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/LLoginRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.91" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>