<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <TextView
        android:id="@+id/tvLetsRegister"
        style="@style/h4"
        android:layout_width="207dp"
        android:layout_height="76dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDontHaveAccount"
        app:layout_constraintEnd_toStartOf="@+id/GLoginRight"
        app:layout_constraintStart_toStartOf="@id/LoginLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/loginDetails"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edit_text_id"
        app:layout_constraintEnd_toStartOf="@+id/GLoginRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/LoginLeft"
        app:layout_constraintTop_toBottomOf="@id/tvLetsRegister" />

    <EditText
        android:id="@+id/edLastNameRegister"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:hint="@string/LastName"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/GLoginRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/edFirstNameRegister" />

    <EditText
        android:id="@+id/edFirstNameRegister"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:hint="@string/FirstName"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/GLoginRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <EditText
        android:id="@+id/edit_text_id"
        style="@style/editText"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:hint="Enter Tile"
        app:layout_constraintEnd_toStartOf="@+id/GLoginRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvDontHaveAccount" />

    <EditText
        android:id="@+id/age"
        style="@style/editText"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:hint="Enter Age"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/GLoginRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_id"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edEmailRegister"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:numeric="integer"
        android:phoneNumber="true"
        app:layout_constraintEnd_toEndOf="@id/GLoginRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/LoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/edLastNameRegister" />


    <EditText
        android:id="@+id/edPasswordRegister"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/GLoginRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/LoginLeft"
        app:layout_constraintTop_toBottomOf="@id/edEmailRegister" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="244dp"
        android:layout_height="63dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/GLoginRight"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="@+id/LoginLeft"
        app:layout_constraintTop_toBottomOf="@+id/edPasswordRegister" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/LoginLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09
" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLoginRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.91" />




</androidx.constraintlayout.widget.ConstraintLayout>